fixed: doc single content, Dark mode colors

--- a/assets/scss/frontend.scss
+++ b/assets/scss/frontend.scss
@@ -44,6 +44,7 @@ p .footnotes-link::after {
 	font-size: 24px;
 	font-weight: 500;
 	padding-right: 10px;
+	color: var(--black_800)
 }
 
 .page-template-page-onepage #post {
